Bug 1661363 - Fix -Wpointer-to-int-cast warning. r=rjl

Differential Revision: https://phabricator.services.mozilla.com/D88367

--HG--
extra : rebase_source : 89138451efb5b03dd72ed69741648654a805e81d
extra : histedit_source : ef7695b0563c2f4d73acf057c58ab0951b812ab5